--- a/css/dashboard2/4.css
+++ b/css/dashboard2/4.css
@@ -1,4 +1,4 @@
-.type-4 .container-fluid .admin-panel {
+.type-4 .admin-panel {
   width: 100%;
   padding: 10px 17px;
   display: inline-block;
@@ -10,67 +10,67 @@
   position: relative;
   margin-top: 10px;
 }
-.type-4 .container-fluid .admin-panel .admin-title {
+.type-4 .admin-panel .admin-title {
   border-bottom: 2px solid #E6E9ED;
   padding: 1px 5px 6px;
 }
-.type-4 .container-fluid .admin-panel .admin-title span,
-.type-4 .container-fluid .admin-panel .admin-title .fa,
-.type-4 .container-fluid .admin-panel .admin-title .glyphicon {
+.type-4 .admin-panel .admin-title span,
+.type-4 .admin-panel .admin-title .fa,
+.type-4 .admin-panel .admin-title .glyphicon {
   color: #73879C;
 }
-.type-4 .container-fluid .admin-panel .admin-title h2 {
+.type-4 .admin-panel .admin-title h2 {
   margin: 5px 0 6px;
   float: left;
   display: block;
   font-size: 20px;
   color: #73879C;
 }
-.type-4 .container-fluid .admin-panel .admin-title h2 small {
+.type-4 .admin-panel .admin-title h2 small {
   margin-left: 10px;
   font-size: 13px;
 }
-.type-4 .container-fluid .admin-panel .admin-title .filter-time {
+.type-4 .admin-panel .admin-title .filter-time {
   font-size: 13px;
 }
-.type-4 .container-fluid .admin-panel .admin-title .filter-time #reportrange {
+.type-4 .admin-panel .admin-title .filter-time #reportrange {
   background: #fff;
   cursor: pointer;
   padding: 5px 10px;
   border: 1px solid #ccc;
   float: right;
 }
-.type-4 .container-fluid .admin-panel .admin-content {
+.type-4 .admin-panel .admin-content {
   padding: 0 5px 6px;
   float: left;
   clear: both;
   margin-top: 5px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .demo-placeholder {
+.type-4 .admin-panel .admin-content .demo-placeholder {
   height: 280px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .total-chart {
+.type-4 .admin-panel .admin-content .total-chart {
   border-top: 1px solid #ccc;
   margin-top: 15px;
   padding-top: 5px;
   margin-bottom: 0;
   color: #73879C;
 }
-.type-4 .container-fluid .admin-panel .admin-content .total-chart h2 {
+.type-4 .admin-panel .admin-content .total-chart h2 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 20px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title {
+.type-4 .admin-panel .admin-content .admin-title {
   border-bottom: 2px solid #E6E9ED;
   padding: 1px 5px 6px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title h2 {
+.type-4 .admin-panel .admin-content .admin-title h2 {
   margin: 5px 0 6px;
   float: left;
   display: block;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title .profile-user {
+.type-4 .admin-panel .admin-content .admin-title .profile-user {
   min-width: 70px;
   float: right;
   margin-right: 0;
@@ -78,35 +78,35 @@
   padding-left: 0;
   margin-top: 5px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title .profile-user>li>a {
+.type-4 .admin-panel .admin-content .admin-title .profile-user>li>a {
   padding: 5px;
   color: #C5C7CB;
   font-size: 13px;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title .profile-user>li {
+.type-4 .admin-panel .admin-content .admin-title .profile-user>li {
   float: left;
   cursor: pointer;
 }
-.type-4 .container-fluid .admin-panel .admin-content .admin-title .collapse-link,
-.type-4 .container-fluid .admin-panel .admin-content .admin-title .close-link {
+.type-4 .admin-panel .admin-content .admin-title .collapse-link,
+.type-4 .admin-panel .admin-content .admin-title .close-link {
   opacity: 1;
 }
-.type-4 .container-fluid .admin-panel .admin-content .sparkline11,
-.type-4 .container-fluid .admin-panel .admin-content .sparkline22,
-.type-4 .container-fluid .admin-panel .admin-content #chart_plot_02 {
+.type-4 .admin-panel .admin-content .sparkline11,
+.type-4 .admin-panel .admin-content .sparkline22,
+.type-4 .admin-panel .admin-content #chart_plot_02 {
   opacity: 1;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user {
+.type-4 .admin-panel .admin-content ul.profiles-user {
   padding-left: 0;
   list-style: none;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li:nth-child(odd) {
+.type-4 .admin-panel .admin-content ul.profiles-user li:nth-child(odd) {
   background-color: #eee;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li {
+.type-4 .admin-panel .admin-content ul.profiles-user li {
   margin-top: 10px;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-thumb {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-thumb {
   border: 1px solid #9CC2CB !important;
   width: 50px;
   height: 50px;
@@ -115,26 +115,26 @@
   padding: 9px 12px;
   float: left;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-thumb i {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-thumb i {
   font-size: 30px;
   color: #73879C;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-comment {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-comment {
   color: #5A738E;
   display: table-cell;
   vertical-align: top;
   width: 10000px;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-comment a.title {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-comment a.title {
   font-weight: 700;
   text-decoration: none;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-comment p {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-comment p {
   margin-bottom: 0;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-comment p small {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-comment p small {
   font-size: 85%;
 }
-.type-4 .container-fluid .admin-panel .admin-content ul.profiles-user li .profile-comment p span {
+.type-4 .admin-panel .admin-content ul.profiles-user li .profile-comment p span {
   white-space: nowrap;
 }
