--- a/css/dashboard2/6.css
+++ b/css/dashboard2/6.css
@@ -1,4 +1,4 @@
-.type-6 .container-fluid .admin-panel {
+.type-6 .admin-panel {
   width: 100%;
   padding: 10px 17px;
   display: inline-block;
@@ -10,50 +10,50 @@
   position: relative;
   margin-top: 20px;
 }
-.type-6 .container-fluid .admin-panel .admin-title {
+.type-6 .admin-panel .admin-title {
   border-bottom: 2px solid #E6E9ED;
   padding: 1px 5px 6px;
   margin-bottom: 10px;
 }
-.type-6 .container-fluid .admin-panel .admin-title h2 {
+.type-6 .admin-panel .admin-title h2 {
   margin: 5px 0 6px;
   float: left;
   display: block;
   font-size: 20px;
   color: #73879C;
 }
-.type-6 .container-fluid .admin-panel .admin-title h2 small {
+.type-6 .admin-panel .admin-title h2 small {
   margin-left: 10px;
   font-size: 13px;
 }
-.type-6 .container-fluid .admin-panel .admin-title ul.items {
+.type-6 .admin-panel .admin-title ul.items {
   min-width: 70px;
   margin-right: 0;
   float: right;
   list-style: none;
   margin-top: 5px;
 }
-.type-6 .container-fluid .admin-panel .admin-title ul.items .collapse-link,
-.type-6 .container-fluid .admin-panel .admin-title ul.items .close-link {
+.type-6 .admin-panel .admin-title ul.items .collapse-link,
+.type-6 .admin-panel .admin-title ul.items .close-link {
   opacity: 1;
 }
-.type-6 .container-fluid .admin-panel .admin-title ul.items > li {
+.type-6 .admin-panel .admin-title ul.items > li {
   float: left;
   cursor: pointer;
 }
-.type-6 .container-fluid .admin-panel .admin-title ul.items > li > a {
+.type-6 .admin-panel .admin-title ul.items > li > a {
   padding: 5px;
   color: #73879C;
   font-size: 13px;
 }
-.type-6 .container-fluid .admin-panel .admin-content {
+.type-6 .admin-panel .admin-content {
   padding: 0 5px 6px;
   width: 100%;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items {
+.type-6 .admin-panel .admin-content div.list-items {
   margin-top: 15px;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .date {
+.type-6 .admin-panel .admin-content div.list-items .date {
   background: #ccc;
   width: 52px;
   margin-right: 10px;
@@ -62,23 +62,23 @@
   float: left;
   text-decoration: none;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .date .month,
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .date .day {
+.type-6 .admin-panel .admin-content div.list-items .date .month,
+.type-6 .admin-panel .admin-content div.list-items .date .day {
   margin: 0;
   text-align: center;
   color: #fff;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .date .day {
+.type-6 .admin-panel .admin-content div.list-items .date .day {
   font-size: 20px;
   line-height: 27px;
   font-weight: 700;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .items-info a.title {
+.type-6 .admin-panel .admin-content div.list-items .items-info a.title {
   font-weight: 700;
   color: #5A738E;
   text-decoration: none;
 }
-.type-6 .container-fluid .admin-panel .admin-content div.list-items .items-info p {
+.type-6 .admin-panel .admin-content div.list-items .items-info p {
   margin-bottom: 0;
   white-space: pre-line;
   color: #73879C;
