--- a/css/e-commerce/31.css
+++ b/css/e-commerce/31.css
@@ -1,40 +1,37 @@
 .type-31 {
   color: #73879C;
 }
-.type-31 .container-fluid .content {
-  margin: 0 15px;
-}
-.type-31 .container-fluid .content .content-left {
+.type-31 .content .content-left {
   float: left;
 }
-.type-31 .container-fluid .content .content-left h3 {
+.type-31 .content .content-left h3 {
   margin: 20px 0;
 }
-.type-31 .container-fluid .content .content-right {
+.type-31 .content .content-right {
   float: right;
 }
-.type-31 .container-fluid .content .content-right .input-search {
+.type-31 .content .content-right .input-search {
   margin-top: 22px;
   position: relative;
   display: flex;
 }
-.type-31 .container-fluid .content .content-right .input-search .form-search {
+.type-31 .content .content-right .input-search .form-search {
   box-shadow: inset 0 1px 0 rgba(0,0,0,0.075);
   border-radius: 25px 0 0 25px;
   padding-left: 20px;
   border: 1px solid rgba(221,226,232,0.49);
 }
-.type-31 .container-fluid .content .content-right .input-search .input-btn-search .btn-search {
+.type-31 .content .content-right .input-search .input-btn-search .btn-search {
   border-radius: 0 25px 25px 0;
   border: 1px solid rgba(221,226,232,0.49);
   border-left: 0;
   background-color: #ffffff;
   color: #73879C;
 }
-.type-31 .container-fluid .content .content-right .input-search .input-btn-search .btn-search:hover {
+.type-31 .content .content-right .input-search .input-btn-search .btn-search:hover {
   background-color: #93A2B2;
 }
-.type-31 .container-fluid .admin-panel {
+.type-31 .admin-panel {
   width: 100%;
   padding: 10px 17px;
   display: inline-block;
@@ -45,110 +42,110 @@
   margin-bottom: 10px;
   position: relative;
 }
-.type-31 .container-fluid .admin-panel .admin-title {
+.type-31 .admin-panel .admin-title {
   border-bottom: 2px solid #E6E9ED;
   padding: 1px 5px 6px;
 }
-.type-31 .container-fluid .admin-panel .admin-title h3 {
+.type-31 .admin-panel .admin-title h3 {
   margin: 5px 0 6px;
   float: left;
   display: block;
   font-size: 18px;
 }
-.type-31 .container-fluid .admin-panel .admin-title ul.items {
+.type-31 .admin-panel .admin-title ul.items {
   margin-right: 0;
   min-width: 70px;
   float: right;
   list-style: none;
   margin-top: 5px;
 }
-.type-31 .container-fluid .admin-panel .admin-title ul.items li {
+.type-31 .admin-panel .admin-title ul.items li {
   float: left;
   cursor: pointer;
 }
-.type-31 .container-fluid .admin-panel .admin-title ul.items li a {
+.type-31 .admin-panel .admin-title ul.items li a {
   padding: 5px;
   color: #C5C7CB;
   font-size: 13px;
 }
-.type-31 .container-fluid .admin-panel .admin-title ul.items .collapse-link,
-.type-31 .container-fluid .admin-panel .admin-title ul.items .close-link {
+.type-31 .admin-panel .admin-title ul.items .collapse-link,
+.type-31 .admin-panel .admin-title ul.items .close-link {
   opacity: 1;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-img,
-.type-31 .container-fluid .admin-panel .admin-content .product-name {
+.type-31 .admin-panel .admin-content .product-img,
+.type-31 .admin-panel .admin-content .product-name {
   margin-top: 15px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-img img {
+.type-31 .admin-panel .admin-content .product-img img {
   max-width: 100%;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-gallery a {
+.type-31 .admin-panel .admin-content .product-gallery a {
   width: 100px;
   height: 100px;
   float: left;
   margin: 10px;
   border: 1px solid #e5e5e5;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-gallery a img {
+.type-31 .admin-panel .admin-content .product-gallery a img {
   max-width: 100%;
   margin-top: 15px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-name {
+.type-31 .admin-panel .admin-content .product-name {
   border-bottom: 1px solid #e0e0e0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info p.description {
+.type-31 .admin-panel .admin-content .product-info p.description {
   padding: 25px 0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name {
   padding-left: 0;
   margin-left: -5px;
   list-style: none;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li {
   margin: 0 10px;
   padding: 0 5px;
   float: left;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li p {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li p {
   margin-bottom: 0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li .color {
   width: 25px;
   height: 25px;
   border: 2px solid rgba(51,51,51,0.28) !important;
   padding: 2px;
   border-radius: 50px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.green {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li .color.green {
   background: #1ABB9C !important;
   color: #fff;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.blue {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li .color.blue {
   background: #3498DB !important;
   color: #fff;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.red {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li .color.red {
   background: #E74C3C !important;
   color: #fff;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-color ul.color-name li .color.orange {
+.type-31 .admin-panel .admin-content .product-info .product-color ul.color-name li .color.orange {
   background: #F39C12 !important;
   color: #fff;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size {
+.type-31 .admin-panel .admin-content .product-info .product-size {
   padding: 25px 0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name {
+.type-31 .admin-panel .admin-content .product-info .product-size ul.size-name {
   padding-left: 0;
   margin-left: -5px;
   list-style: none;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li {
+.type-31 .admin-panel .admin-content .product-info .product-size ul.size-name li {
   margin: 0;
   padding: 0 5px;
   float: left;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size {
+.type-31 .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size {
   margin-bottom: 5px;
   margin-right: 5px;
   color: #333;
@@ -159,29 +156,29 @@
   border-radius: 3px;
   font-size: 12px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size:hover {
+.type-31 .admin-panel .admin-content .product-info .product-size ul.size-name li a.btn-size:hover {
   background-color: #e6e6e6;
   border-color: #adadad;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price {
+.type-31 .admin-panel .admin-content .product-info .product-price {
   margin-top: 50px;
   padding: 5px 10px;
   background-color: #FFF;
   text-align: left;
   border: 2px dashed #E0E0E0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price .price {
+.type-31 .admin-panel .admin-content .product-info .product-price .price {
   color: #26B99A;
   margin: 0;
   font-weight: 400;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-price .price-tax {
+.type-31 .admin-panel .admin-content .product-info .product-price .price-tax {
   font-size: 18px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd {
+.type-31 .admin-panel .admin-content .product-info .product-btnadd {
   margin-top: 25px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart {
+.type-31 .admin-panel .admin-content .product-info .product-btnadd .add-to-cart {
   margin-bottom: 5px;
   margin-right: 5px;
   color: #333;
@@ -192,47 +189,47 @@
   font-size: 18px;
   text-decoration: none;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-btnadd .add-to-cart:hover {
+.type-31 .admin-panel .admin-content .product-info .product-btnadd .add-to-cart:hover {
   background-color: #e6e6e6;
   border-color: #adadad;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social {
+.type-31 .admin-panel .admin-content .product-info .product-social {
   margin-top: 35px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social {
+.type-31 .admin-panel .admin-content .product-info .product-social ul.list-social {
   padding-left: 0;
   margin-left: -5px;
   list-style: none;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li {
+.type-31 .admin-panel .admin-content .product-info .product-social ul.list-social li {
   float: left;
   padding: 0 4px;
   margin: 0;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a {
+.type-31 .admin-panel .admin-content .product-info .product-social ul.list-social li a {
   color: #5A738E;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a i {
+.type-31 .admin-panel .admin-content .product-info .product-social ul.list-social li a i {
   font-size: 35px;
 }
-.type-31 .container-fluid .admin-panel .admin-content .product-info .product-social ul.list-social li a:hover {
+.type-31 .admin-panel .admin-content .product-info .product-social ul.list-social li a:hover {
   color: #337ab7;
 }
-.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs {
+.type-31 .admin-panel .admin-content ul.nav-tabs {
   margin-top: 25px;
   padding-left: 10px;
   background: #F5F7FA;
 }
-.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs li {
+.type-31 .admin-panel .admin-content ul.nav-tabs li {
   color: #333 !important;
   background: #F5F7FA;
   border-bottom: none;
   border-radius: 4px 4px 0 0;
 }
-.type-31 .container-fluid .admin-panel .admin-content ul.nav-tabs li a {
+.type-31 .admin-panel .admin-content ul.nav-tabs li a {
   color: #5A738E;
 }
-.type-31 .container-fluid .admin-panel .admin-content .tab-content {
+.type-31 .admin-panel .admin-content .tab-content {
   padding: 10px 0;
 }
 .ul-temp {
