--- a/css/dashboard2/7.css
+++ b/css/dashboard2/7.css
@@ -1,13 +1,13 @@
-.type-7 .container-fluid footer {
+.type-7 footer {
   padding: 10px 10px;
   text-align: right;
   display: block;
   color: #5A738E;
 }
-.type-7 .container-fluid footer a {
+.type-7 footer a {
   text-decoration: none;
   color: #5A738E;
 }
-.type-7 .container-fluid footer a:hover {
+.type-7 footer a:hover {
   text-decoration: none;
 }
