--- a/css/table1/16.css
+++ b/css/table1/16.css
@@ -1,55 +1,55 @@
 .type-16 {
   padding-left: 0;
 }
-.type-16 .container-fluid .top-nav .nav_menu {
+.type-16 .top-nav .nav_menu {
   float: left;
   background-color: #ededed;
   border-bottom: 1px solid #d9dee4;
   width: 100%;
 }
-.type-16 .container-fluid .top-nav .nav_menu .toggle {
+.type-16 .top-nav .nav_menu .toggle {
   float: left;
   margin: 0;
   padding-top: 15px;
   width: 70px;
   color: #e7e7e7;
 }
-.type-16 .container-fluid .top-nav .nav_menu .toggle a {
+.type-16 .top-nav .nav_menu .toggle a {
   padding: 15px 15px 0;
   margin: 0;
   cursor: pointer;
   color: #5A738E;
 }
-.type-16 .container-fluid .top-nav .nav_menu .toggle a i {
+.type-16 .top-nav .nav_menu .toggle a i {
   font-size: 26px;
 }
-.type-16 .container-fluid .top-nav .navbar-right {
+.type-16 .top-nav .navbar-right {
   margin: 0;
   width: 70%;
   float: right;
 }
-.type-16 .container-fluid .top-nav .navbar-right li {
+.type-16 .top-nav .navbar-right li {
   position: relative;
   float: right;
   display: inline-block;
   cursor: pointer;
 }
-.type-16 .container-fluid .top-nav .navbar-right li a {
+.type-16 .top-nav .navbar-right li a {
   color: #515356;
   line-height: 32px;
 }
-.type-16 .container-fluid .top-nav .navbar-right li a img {
+.type-16 .top-nav .navbar-right li a img {
   max-width: none;
   width: 29px;
   height: 29px;
   border-radius: 50%;
   margin-right: 10px;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.user-profile li a span,
-.type-16 .container-fluid .top-nav .navbar-right li ul.user-profile li a i {
+.type-16 .top-nav .navbar-right li ul.user-profile li a span,
+.type-16 .top-nav .navbar-right li ul.user-profile li a i {
   float: right;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list {
+.type-16 .top-nav .navbar-right li ul.msg_list {
   width: 300px;
   position: absolute;
   background: #fff;
@@ -58,48 +58,48 @@
   right: 0;
   left: auto;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li {
+.type-16 .top-nav .navbar-right li ul.msg_list li {
   position: relative;
   background: #f7f7f7;
   padding: 5px;
   margin: 6px 6px 0;
   width: 96%;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a {
+.type-16 .top-nav .navbar-right li ul.msg_list li a {
   width: 100%;
   color: #5A738E;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a span {
+.type-16 .top-nav .navbar-right li ul.msg_list li a span {
   white-space: normal;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a .image,
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a .name {
+.type-16 .top-nav .navbar-right li ul.msg_list li a .image,
+.type-16 .top-nav .navbar-right li ul.msg_list li a .name {
   cursor: pointer;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a .image img {
+.type-16 .top-nav .navbar-right li ul.msg_list li a .image img {
   float: left;
   margin-right: 10px;
   width: 11%;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a .time {
+.type-16 .top-nav .navbar-right li ul.msg_list li a .time {
   font-size: 13px;
   font-style: italic;
   font-weight: 700;
   position: absolute;
   right: 35px;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li a .msg {
+.type-16 .top-nav .navbar-right li ul.msg_list li a .msg {
   display: block;
   font-size: 13px;
   font-style: italic;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li .text-center a {
+.type-16 .top-nav .navbar-right li ul.msg_list li .text-center a {
   text-decoration: none;
 }
-.type-16 .container-fluid .top-nav .navbar-right li ul.msg_list li:hover {
+.type-16 .top-nav .navbar-right li ul.msg_list li:hover {
   background-color: none;
 }
-.type-16 .container-fluid .top-nav .navbar-right li .info-number .badge {
+.type-16 .top-nav .navbar-right li .info-number .badge {
   font-size: 13px;
   line-height: 13px;
   padding: 2px 6px;
