--- a/css/table1/19.css
+++ b/css/table1/19.css
@@ -1,13 +1,13 @@
-.type-19 .container-fluid footer {
+.type-19 footer {
   padding: 10px 10px;
   text-align: right;
   display: block;
   color: #5A738E;
 }
-.type-19 .container-fluid footer a {
+.type-19 footer a {
   text-decoration: none;
   color: #5A738E;
 }
-.type-19 .container-fluid footer a:hover {
+.type-19 footer a:hover {
   text-decoration: none;
 }
