--- a/less/dashboard2/1.less
+++ b/less/dashboard2/1.less
@@ -1,18 +1,20 @@
 @color: #ffffff;
 @color-menu: #ededed;
 @font-size: 13px;
-@background-body: #2A3F54;
 body {
-    background-color: @background-body;
+    background-color: #2A3F54;
+
 }
 .type-1 {
     .container-fluid {
-        .sidebar-left {
+        .sidebar-left {            
+
             .logo {
                 text-align: center;
                 line-height: 60px;
                 a {
                     text-decoration: none;
+
                     color: @color;
                     .fa-paw {
                         border: 1px solid #e0e0e0;
@@ -119,7 +121,7 @@ body {
                     position: fixed;
                     bottom: 0;
                     background-color: #2A3F54;
-                    width: 235px;
+                    width: 230px;
                     a {
                         padding: 7px 0 3px;
                         text-align: center;
