--- a/css/e-commerce/type-f-12.css
+++ b/css/e-commerce/type-f-12.css
@@ -13,13 +13,16 @@
   transition: all 0.5s ease;
   color: #73879C;
 }
+.type-f-12 .sidebar-left {
+  background-color: #2A3F54;
+}
 .type-f-12 .sidebar-left .logo {
   text-align: center;
   line-height: 60px;
 }
 .type-f-12 .sidebar-left .logo a {
   text-decoration: none;
-  color: #ffffff;
+  color: #fff;
 }
 .type-f-12 .sidebar-left .logo a .fa-paw {
   border: 1px solid #e0e0e0;
@@ -28,10 +31,9 @@
 }
 .type-f-12 .sidebar-left .logo a .fa-paw,
 .type-f-12 .sidebar-left .logo a span {
-  font-size: 19px;
+  font-size: 21px;
 }
 .type-f-12 .sidebar-left .img-user {
-  padding-left: 12px;
   margin: 10px 0;
 }
 .type-f-12 .sidebar-left .img-user img {
@@ -51,14 +53,11 @@
 .type-f-12 .sidebar-left .img-user .welcome-name span {
   color: #BAB8B8;
 }
-.type-f-12 .sidebar-left .menu-vertical {
-  padding-left: 11px;
-}
 .type-f-12 .sidebar-left .menu-vertical h4 {
   text-transform: uppercase;
   line-height: 50px;
-  font-size: 12px;
-  color: #ffffff;
+  font-size: 13px;
+  color: #fff;
   text-shadow: 1px 1px #000;
 }
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu {
@@ -77,7 +76,7 @@
 }
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu li .parent-menu a {
   text-decoration: none;
-  font-size: 12px;
+  font-size: 13px;
   color: #ededed;
   font-weight: normal;
 }
@@ -92,7 +91,7 @@
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu li .parent-menu a .fa-sitemap,
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu li .parent-menu a .fa-laptop {
   width: 30px;
-  font-size: 16px;
+  font-size: 18px;
 }
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu li .parent-menu a .fa-chevron-down {
   float: right;
@@ -113,7 +112,7 @@
   text-decoration: none;
   padding-left: 30px;
   color: #ededed;
-  font-size: 12px;
+  font-size: 13px;
 }
 .type-f-12 .sidebar-left .menu-vertical ul.item-menu li ul.child-menu li.current-page {
   background-color: rgba(255,255,255,0.06);
@@ -140,14 +139,13 @@
   padding: 5px 0 0;
   position: fixed;
   bottom: 0;
-  background-color: #2A3F54;
-  width: 230px;
+  width: 244px;
 }
 .type-f-12 .sidebar-left .menu-vertical .sidebar-footer a {
   padding: 7px 0 3px;
   text-align: center;
   width: 20.5%;
-  font-size: 12px;
+  font-size: 13px;
   display: block;
   float: left;
   background: #172D44;
@@ -155,6 +153,9 @@
 }
 .type-f-12 .sidebar-left .menu-vertical .sidebar-footer a i {
   color: #5A738E;
+}
+.type-f-12 .sidebar-left .menu-vertical .sidebar-footer a:hover {
+  background-color: #425567;
 }
 .type-f-12 .top-nav .nav_menu {
   background-color: #ededed;
@@ -170,8 +171,6 @@
   color: #2A3F54;
 }
 .type-f-12 .top-nav .navbar-right {
-  margin: 0;
-  width: 70%;
   float: right;
 }
 .type-f-12 .top-nav .navbar-right li {
@@ -523,6 +522,20 @@
 .type-f-12 #back-to-top:hover {
   border: 1px solid #ffa789;
   background: #ff6734;
+}
+@media (max-width: 980px) {
+  .sidebar-left {
+    display: none;
+  }
+  .content .content-left h3 {
+    font-size: 16px;
+  }
+  .content .content-right {
+    margin-top: -5px;
+  }
+  .product-name h3 {
+    display: inline-block;
+  }
 }
 .type-f-12.toggled {
   margin-left: -270px;
