--- a/less/e-commerce/type-f-12.less
+++ b/less/e-commerce/type-f-12.less
@@ -21,24 +21,24 @@ and open the template in the editor.
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     .sidebar-left {
+        background-color: #2A3F54;
         .logo {
             text-align: center;
             line-height: 60px;
             a {
                 text-decoration: none;
-                color: #ffffff;
+                color: #fff;
                 .fa-paw {
                     border: 1px solid #e0e0e0;
                     border-radius: 50%;
                     padding: 5px;
                 }
                 .fa-paw, span {
-                    font-size: 19px;
+                    font-size: 21px;
                 }
             }
         }
         .img-user {
-            padding-left: 12px;
             margin: 10px 0;
             img {
                 width: 30%;
@@ -60,12 +60,11 @@ and open the template in the editor.
             }
         }
         .menu-vertical {
-            padding-left: 11px;
             h4 {
                 text-transform: uppercase;
                 line-height: 50px;
-                font-size: 12px;
-                color: #ffffff;
+                font-size:13px;
+                color: #fff;
                 text-shadow: 1px 1px #000;
             }
             ul.item-menu {
@@ -81,10 +80,10 @@ and open the template in the editor.
                         padding: 10px;
                         a {
                             text-decoration: none;
-                            font-size: 12px;
+                            font-size: 13px;
                             .fa-home, .fa-edit, .fa-table, .fa-desktop, .fa-bar-chart-o, .fa-clone, .fa-bug, .fa-windows, .fa-sitemap, .fa-laptop {
                                 width: 30px;
-                                font-size: 16px;
+                                font-size: 18px;
 
                             }
                             color: #ededed;
@@ -109,8 +108,7 @@ and open the template in the editor.
                                 text-decoration: none;
                                 padding-left: 30px;
                                 color: #ededed;
-                                font-size: 12px;
-
+                                font-size: 13px;
                             }
                         }
                         li.current-page {
@@ -135,13 +133,12 @@ and open the template in the editor.
                 padding: 5px 0 0;
                 position: fixed;
                 bottom: 0;
-                background-color: #2A3F54;
-                width: 230px;
+                width: 244px;
                 a {
                     padding: 7px 0 3px;
                     text-align: center;
                     width: 20.5%;
-                    font-size: 12px;
+                    font-size: 13px;
                     display: block;
                     float: left;
                     background: #172D44;
@@ -149,6 +146,9 @@ and open the template in the editor.
                     i {
                         color: #5A738E;
                     }
+                }
+                a:hover {
+                    background-color: #425567;
                 }
             }
         }
@@ -168,8 +168,6 @@ and open the template in the editor.
             }
         }
         .navbar-right {
-            margin: 0;
-            width: 70%;
             float: right;
 
             li {
@@ -552,7 +550,24 @@ and open the template in the editor.
 
 }
 @media (max-width: 980px) {
-
+    .sidebar-left {
+        display: none;
+    }
+    .content {
+        .content-left {
+            h3 {
+                font-size: 16px;
+            }
+        }
+        .content-right {
+            margin-top: -5px;
+        }
+    }
+    .product-name {
+        h3 {
+            display: inline-block;
+        }        
+    }
 }
 .type-f-12.toggled {
     margin-left: -270px;
